refactor: migrate from WebSocket to HTTP polling with JWT authentication